C3 + Bonnus -- files created

--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
    ],
    "source": [
     "# Your code here:\n",
-    "nasa_shuttles = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst\", sep=' ')\n",
+    "nasa_shuttles = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst\"')\n",
     "nasa_shuttles.columns = cols\n"
    ]
   },
@@ -621,12 +621,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astro = pd.read_excel(\"astronauts.xls\")\n"
    ]
   },
   {
@@ -638,12 +639,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Birth Date</th>\n",
+       "      <th>Birth Place</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Alma Mater</th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Graduate Major</th>\n",
+       "      <th>Military Rank</th>\n",
+       "      <th>Military Branch</th>\n",
+       "      <th>Space Flights</th>\n",
+       "      <th>Space Flight (hr)</th>\n",
+       "      <th>Space Walks</th>\n",
+       "      <th>Space Walks (hr)</th>\n",
+       "      <th>Missions</th>\n",
+       "      <th>Death Date</th>\n",
+       "      <th>Death Mission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph M. Acaba</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>1967-05-17</td>\n",
+       "      <td>Inglewood, CA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of California-Santa Barbara; Univer...</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Loren W. Acton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1936-03-07</td>\n",
+       "      <td>Lewiston, MT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Montana State University; University of Colorado</td>\n",
+       "      <td>Engineering Physics</td>\n",
+       "      <td>Solar Physics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS 51-F (Challenger)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James C. Adamson</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1946-03-03</td>\n",
+       "      <td>Warsaw, NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; Princeton University</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Army (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thomas D. Akers</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1951-05-20</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of Missouri-Rolla</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>814</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buzz Aldrin</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1930-01-20</td>\n",
+       "      <td>Montclair, NJ</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; MIT</td>\n",
+       "      <td>Mechanical Engineering</td>\n",
+       "      <td>Astronautics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>289</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Gemini 12, Apollo 11</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+       "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+       "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+       "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+       "3   Thomas D. Akers  1987.0   12.0  Retired 1951-05-20  St. Louis, MO   Male   \n",
+       "4       Buzz Aldrin  1963.0    3.0  Retired 1930-01-20  Montclair, NJ   Male   \n",
+       "\n",
+       "                                          Alma Mater     Undergraduate Major  \\\n",
+       "0  University of California-Santa Barbara; Univer...                 Geology   \n",
+       "1   Montana State University; University of Colorado     Engineering Physics   \n",
+       "2          US Military Academy; Princeton University             Engineering   \n",
+       "3                       University of Missouri-Rolla     Applied Mathematics   \n",
+       "4                           US Military Academy; MIT  Mechanical Engineering   \n",
+       "\n",
+       "          Graduate Major Military Rank         Military Branch  Space Flights  \\\n",
+       "0                Geology           NaN                     NaN              2   \n",
+       "1          Solar Physics           NaN                     NaN              1   \n",
+       "2  Aerospace Engineering       Colonel       US Army (Retired)              2   \n",
+       "3    Applied Mathematics       Colonel  US Air Force (Retired)              4   \n",
+       "4           Astronautics       Colonel  US Air Force (Retired)              2   \n",
+       "\n",
+       "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+       "0               3307            2              13.0   \n",
+       "1                190            0               0.0   \n",
+       "2                334            0               0.0   \n",
+       "3                814            4              29.0   \n",
+       "4                289            2               8.0   \n",
+       "\n",
+       "                                            Missions Death Date Death Mission  \n",
+       "0             STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+       "1                              STS 51-F (Challenger)        NaT           NaN  \n",
+       "2               STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  \n",
+       "3  STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...        NaT           NaN  \n",
+       "4                               Gemini 12, Apollo 11        NaT           NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "display(astro.head())\n"
    ]
   },
   {
@@ -655,12 +854,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Physics                     35\n",
+       "Aerospace Engineering       33\n",
+       "Mechanical Engineering      30\n",
+       "Aeronautical Engineering    28\n",
+       "Electrical Engineering      23\n",
+       "Name: Undergraduate Major, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pop_grad = astro[\"Undergraduate Major\"].value_counts()\n",
+    "display(pop_grad.head())\n",
+    "most_pop_grad = astro[\"Undergraduate Major\"].value_counts().max()\n",
+    "display(most_pop_grad)"
    ]
   },
   {
@@ -672,12 +899,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astro.to_csv('astro.csv', index=False, sep=\"\\t\")\n"
    ]
   },
   {
@@ -691,12 +919,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-0.33</th>\n",
+       "      <th>0.69</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>1.1</th>\n",
+       "      <th>0.1</th>\n",
+       "      <th>0.8</th>\n",
+       "      <th>0.2</th>\n",
+       "      <th>0.88</th>\n",
+       "      <th>N</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   -0.33  0.69  0  1  1.1  0.1  0.8  0.2  0.88  N\n",
+       "0  -0.33  0.94  1  0    1    0  0.8    1  0.31  O\n",
+       "1  -0.33  0.50  1  0    0    0  1.0   -1  0.50  N\n",
+       "2  -0.33  0.75  0  1    1    0  1.0   -1  0.38  N\n",
+       "3  -0.33  0.67  1  1    0    0  0.8   -1  0.50  O\n",
+       "4  -0.33  0.67  1  0    1    0  0.8    0  0.50  N"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\"https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt\"\n",
+    "\n",
+    "fertility = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt\")\n",
+    "display(fertility.head())\n",
+    "astro.to_csv('fertility.csv', sep=\"\\t\")\n"
    ]
   },
   {
