--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -1098,12 +1098,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Childs-Ills</th>\n",
+       "      <th>Trauma</th>\n",
+       "      <th>Intervenition</th>\n",
+       "      <th>Fevers</th>\n",
+       "      <th>Alcohol</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>Time Sitting</th>\n",
+       "      <th>Output Diagn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.33</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Season   Age  Childs-Ills  Trauma  Intervenition  Fevers  Alcohol  Smoking  \\\n",
+       "0   -0.33  0.94            1       0              1       0      0.8        1   \n",
+       "1   -0.33  0.50            1       0              0       0      1.0       -1   \n",
+       "2   -0.33  0.75            0       1              1       0      1.0       -1   \n",
+       "3   -0.33  0.67            1       1              0       0      0.8       -1   \n",
+       "4   -0.33  0.67            1       0              1       0      0.8        0   \n",
+       "\n",
+       "   Time Sitting Output Diagn  \n",
+       "0          0.31            O  \n",
+       "1          0.50            N  \n",
+       "2          0.38            N  \n",
+       "3          0.50            O  \n",
+       "4          0.50            N  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "import pandas as pd\n",
+    "fertility = pd.read_csv('fertility_Diagnosis.txt')\n",
+    "\n",
+    "columnas = ['Season', 'Age', 'Childs-Ills', 'Trauma',\n",
+    "              'Intervenition', 'Fevers', 'Alcohol', 'Smoking',\n",
+    "             'Time Sitting', 'Output Diagn']\n",
+    "\n",
+    "fertility.columns = columnas\n",
+    "fertility.head()"
    ]
   },
   {
