--- a/module-1/lab-intro-pandas/your-code/main.ipynb
+++ b/module-1/lab-intro-pandas/your-code/main.ipynb
@@ -18,10 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     5.7\n",
+       "1    75.2\n",
+       "2    74.4\n",
+       "3    84.0\n",
+       "4    66.5\n",
+       "5    66.3\n",
+       "6    55.8\n",
+       "7    75.7\n",
+       "8    29.1\n",
+       "9    43.7\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pds_lst = pd.Series(lst)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pds_lst[2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +127,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf = pd.DataFrame(b)\n",
+    "ndf.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,10 +240,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_4</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+       "0     53.1     95.0     67.5     35.0     78.4\n",
+       "1     61.3     40.8     30.8     37.8     87.6\n",
+       "2     20.6     73.2     44.2     14.6     91.8\n",
+       "3     57.4      0.1     96.1      4.2     69.5\n",
+       "4     83.6     20.5     85.4     22.8     35.9"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf.columns = colnames\n",
+    "ndf.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +344,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4\n",
+       "1     61.3     30.8     87.6\n",
+       "2     20.6     44.2     91.8\n",
+       "3     57.4     96.1     69.5\n",
+       "4     83.6     85.4     35.9"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf_sbs = ndf[['Score_1', 'Score_3', 'Score_5']]\n",
+    "ndf_sbs.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +436,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.95000000000001"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf['Score_3'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf['Score_4'].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +490,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndf['Score_2'].median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +538,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>24</td>\n",
+       "      <td>13.20</td>\n",
+       "      <td>0.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>518.40</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Description  Quantity  Revenue  UnitPrice\n",
+       "0              LUNCH BAG APPLE DESIGN         1     1.65       1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24    13.20       0.55\n",
+       "2         RIBBON REEL STRIPES DESIGN          1     1.65       1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880   518.40       0.18\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2     2.50       1.25"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prod = pd.DataFrame.from_dict(orders)\n",
+    "prod.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,16 +636,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Quantity =  2978\n",
+      "Total Revenue =  637.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_quantity = prod['Quantity'].sum()\n",
+    "total_revenue = prod['Revenue'].sum()\n",
+    "print('Total Quantity = ', total_quantity)\n",
+    "print('Total Revenue = ', total_revenue)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 12. Obtain the prices of the most expensive and least expensive items ordered and print the difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference =  11.77\n",
+      "---------------\n",
+      "most expensive item is\n",
+      "BOX OF VINTAGE ALPHABET BLOCKS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Description  Quantity  Revenue  UnitPrice\n",
+       "6  BOX OF VINTAGE ALPHABET BLOCKS         1    11.95      11.95"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------\n",
+      "least expensive item is\n",
+      "WORLD WAR 2 GLIDERS ASSTD DESIGNS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>518.4</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Description  Quantity  Revenue  UnitPrice\n",
+       "3  WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880    518.4       0.18"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "difference = prod['UnitPrice'].max()-prod['UnitPrice'].min()\n",
+    "print('Difference = ', difference)\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "maxp = prod['UnitPrice'].max()\n",
+    "max_row= prod['UnitPrice']==maxp\n",
+    "is_max = prod[max_row]\n",
+    "print('most expensive item is')\n",
+    "print(prod['Description'][6])\n",
+    "display(is_max)\n",
+    "print(\"---------------\")\n",
+    "\n",
+    "minp = prod['UnitPrice'].min()\n",
+    "min_row = prod['UnitPrice']==minp\n",
+    "is_min = prod[min_row]\n",
+    "print('least expensive item is')\n",
+    "print(prod['Description'][3])\n",
+    "display(is_min)\n"
    ]
   },
   {
@@ -253,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
