--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "Name: fall, dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "4                               Gemini 12, Apollo 11        NaT           NaN  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -730,58 +730,58 @@
        "Chemical Engineering                                                    9\n",
        "Astronautical Engineering                                               8\n",
        "Aeronautical & Astronautical Engineering                                6\n",
+       "Civil Engineering                                                       5\n",
        "Geology                                                                 5\n",
        "Mathematics & Physics                                                   5\n",
-       "Civil Engineering                                                       5\n",
        "Biology                                                                 5\n",
-       "Applied Science & Engineering                                           4\n",
        "Physics & Astronomy                                                     4\n",
+       "Applied Science & Engineering                                           4\n",
+       "Aeronautics & Astronautics                                              3\n",
        "Computer Science                                                        3\n",
        "Applied Mathematics                                                     3\n",
-       "Aeronautics & Astronautics                                              3\n",
        "Engineering Physics                                                     3\n",
        "Zoology                                                                 2\n",
-       "Physics & Mathematics                                                   2\n",
-       "Engineering Mechanics                                                   2\n",
-       "Engineering Management                                                  2\n",
-       "Biological Science                                                      2\n",
+       "Chemistry & Biology                                                     2\n",
        "Ocean Engineering                                                       2\n",
+       "Physics & Mathematics                                                   2\n",
        "Education                                                               2\n",
+       "Biological Science                                                      2\n",
+       "Engineering Management                                                  2\n",
        "                                                                       ..\n",
-       "Business Management; Aeronautical Engineering                           1\n",
-       "Computer & Systems Engineering                                          1\n",
-       "Earth & Planetary Science                                               1\n",
-       "Human Biology                                                           1\n",
-       "Business Economics                                                      1\n",
-       "Astronautics                                                            1\n",
-       "Physical Science                                                        1\n",
-       "Electronics Engineering                                                 1\n",
-       "Solid Earth Sciences                                                    1\n",
-       "Applied Biology; Mechanical Engineering                                 1\n",
-       "Physics & Astronautical Engineering                                     1\n",
-       "Military Science                                                        1\n",
        "Biology & Psychology                                                    1\n",
-       "Mechanical & Aeronautical Engineering                                   1\n",
-       "Mathematics & Economics                                                 1\n",
-       "Music                                                                   1\n",
-       "Mathematics; Russian                                                    1\n",
-       "Psychology                                                              1\n",
-       "Ecological Science                                                      1\n",
-       "Electrical Engineering; Computer Science                                1\n",
-       "Nuclear Engineering                                                     1\n",
-       "Chemistry; Physiological Optics                                         1\n",
        "Physics & Engineering                                                   1\n",
-       "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
-       "Biochemistry                                                            1\n",
-       "Philosophy                                                              1\n",
-       "Physiology                                                              1\n",
+       "Military Science                                                        1\n",
+       "Systems Engineering                                                     1\n",
+       "Ecological Science                                                      1\n",
+       "Animal Science                                                          1\n",
        "Economics                                                               1\n",
-       "Astronomy                                                               1\n",
+       "Physical Science                                                        1\n",
+       "Human Biology                                                           1\n",
+       "Aerospace Engineering & Mechanics                                       1\n",
+       "Accounting                                                              1\n",
+       "Industrial Management                                                   1\n",
+       "Chemistry; Physiological Optics                                         1\n",
+       "Physics; English                                                        1\n",
+       "Industrial Engineering                                                  1\n",
+       "Space Physics                                                           1\n",
+       "Computer & Systems Engineering                                          1\n",
+       "Engineering Sciences; Astronautics & Mathematics                        1\n",
+       "Earth Sciences                                                          1\n",
+       "Geosciences                                                             1\n",
+       "Nuclear Engineering                                                     1\n",
+       "Psychology                                                              1\n",
+       "Mechanical & Aeronautical Engineering                                   1\n",
        "Molecular Biology                                                       1\n",
+       "Biochemistry                                                            1\n",
+       "Physiology                                                              1\n",
+       "Bioscience                                                              1\n",
+       "Solid Earth Sciences                                                    1\n",
+       "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
+       "Astronautics                                                            1\n",
        "Name: Undergraduate Major, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,11 +820,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>-0.33</th>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.33</th>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.33</th>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.33</th>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.33</th>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>O</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "-0.33  0.69         0          1         1     0     0.8          0      0.88   \n",
+       "-0.33  0.94         1          0         1     0     0.8          1      0.31   \n",
+       "-0.33  0.50         1          0         0     0     1.0         -1      0.50   \n",
+       "-0.33  0.75         0          1         1     0     1.0         -1      0.38   \n",
+       "-0.33  0.67         1          1         0     0     0.8         -1      0.50   \n",
+       "\n",
+       "      class  \n",
+       "-0.33     N  \n",
+       "-0.33     O  \n",
+       "-0.33     N  \n",
+       "-0.33     N  \n",
+       "-0.33     O  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "\n",
+    "\n",
+    "fert_url = urlopen(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00244/fertility_Diagnosis.txt\")\n",
+    "csv_data = response.read().decode('utf-8', 'replace')\n",
+    "\n",
+    "fertility = pd.read_csv(fert_url, sep = ',', names=cols)\n",
+    "\n",
+    "display(fertility.head())\n",
     "\n"
    ]
   },
