--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -26,7 +26,8 @@
    "outputs": [],
    "source": [
     "# Your import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -50,7 +51,7 @@
     "import json\n",
     "\n",
     "response = urlopen(\"https://data.nasa.gov/resource/y77d-th95.json\")\n",
-    "json_data = response.read().decode('utf-8', 'replace')"
+    "json_data = response.read().decode('utf-8', 'replace')\n"
    ]
   },
   {
@@ -66,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "nasa = pd.read_json(json_data)"
    ]
   },
   {
@@ -81,10 +81,152 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "display(nasa.head())"
    ]
   },
   {
@@ -100,10 +242,23 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa.fall.value_counts()"
    ]
   },
   {
@@ -120,7 +275,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "nasa.to_json(\"nasa.json\",orient=\"records\")\n"
    ]
   },
   {
@@ -136,24 +291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
     "\n",
-    "cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class']\n",
+    "cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class', ' ']\n",
     "tst_url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/statlog/shuttle/shuttle.tst'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url, sep = \" \")\n",
+    "shuttle.columns = cols\n"
    ]
   },
   {
@@ -165,12 +321,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53</td>\n",
+       "      <td>9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55</td>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "0    56         0         96         0    52      -4         40        44   \n",
+       "1    50        -1         89        -7    50       0         39        40   \n",
+       "2    53         9         79         0    42      -2         25        37   \n",
+       "3    55         2         82         0    54      -6         26        28   \n",
+       "4    41         0         84         3    38      -4         43        45   \n",
+       "\n",
+       "   class     \n",
+       "0      4  4  \n",
+       "1      2  1  \n",
+       "2     12  4  \n",
+       "3      2  1  \n",
+       "4      2  1  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.head()\n"
    ]
   },
   {
@@ -182,12 +462,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.to_csv (\"shuttle.csv\",sep = \",\")"
    ]
   },
   {
@@ -203,12 +484,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "import xlrd\n"
    ]
   },
   {
@@ -220,12 +502,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut = pd.read_excel(\"astronauts.xls\")"
    ]
   },
   {
@@ -237,12 +520,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Physics    35\n",
+       "Name: Undergraduate Major, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "a = astronaut[\"Undergraduate Major\"].value_counts().head(1)\n",
+    "a"
    ]
   },
   {
@@ -254,12 +550,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.to_csv (\"shuttle.csv\")\n"
    ]
   },
   {
@@ -273,12 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "fertility =  pd.read_csv(\"fertility_Diagnosis.txt\")\n",
+    "a = (\"Season\",\"Age\",\"Childish\",\"Childish diseases\",\"Accident\",\"Surgical intervention\",\"High fevers l/y\", \"Freq. of alcohol consumption \",\"Smoking habit\",\"Number of hours\")\n",
+    "\n",
+    "fertility.columns = a\n"
    ]
   },
   {
@@ -305,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
